--- a/.github/workflows/main_m2mclothingtanloc.yml
+++ b/.github/workflows/main_m2mclothingtanloc.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://m2mcolthing.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_55af58bb9d534a59bef3185643bb2483 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_08d4a37e86f94b51bc9776161e4f79f9 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_4d906c96310b445babde8a159dacf115 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_13dcec2543864d1cbe6599d86b0833c2 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: m2mcolthing.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_55af58bb9d534a59bef3185643bb2483 }}/latest:${{ github.sha }}
+        tags: m2mcolthing.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_4d906c96310b445babde8a159dacf115 }}/m2mcolthing:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'm2mclothingtanloc'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_f3caed54744b4d26bb519ab60ef5d7c1 }}
-        images: 'm2mcolthing.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_55af58bb9d534a59bef3185643bb2483 }}/latest:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_63685812495d4fb38049c5f5bb46e10b }}
+        images: 'm2mcolthing.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_4d906c96310b445babde8a159dacf115 }}/m2mcolthing:${{ github.sha }}'
